--- a/2.2.1. spring_hibernate/src/main/resources/db.properties
+++ b/2.2.1. spring_hibernate/src/main/resources/db.properties
@@ -6,7 +6,7 @@ db.password=root
 
 # Hibernate properties
 hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.hbm2ddl.auto=create
 
 
